--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 markdown: rdiscount
 permalink: /:categories/:title/
 author: Xiaojun Sun
-pygments: true
+highlighter: pygments
 safe: true
 paginate: 16
 
