--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,43 @@
 .Rproj
 Thumbs.db # https://alison.rbind.io/post/up-and-running-with-blogdown/
 blogdown
-public/ # if using Netlify
+public # if using Netlify
+public/tags/tutorial/index.xml
+public/tags/tutorial/index.html
+public/tags/regression/index.xml
+public/tags/regression/index.html
+public/fonts/merriweather-v13-latin-regular.woff
+public/fonts/lato-v11-latin-regular.woff2
+public/fonts/lato-v11-latin-regular.woff
+public/css/main.css
+public/css/fonts.css
+public/categories/r/index.xml
+public/categories/r/index.html
+public/categories/index.xml
+public/categories/index.html
+public/about/index.html
+public/2018/09/02/hello-r-markdown/index.html
+public/2016/12/30/a-plain-markdown-post/index.html
+public/2015/07/23/hello-r-markdown/index.html
+public/2015/01/01/lorem-ipsum/index.html
+public/2014/10/12/mode-type-and-class-of-r-objects/index.html
+public/2014/06/20/install-and-update-r-on-windows/index.html
+public/.gitkeep
+public/post/index.xml
+public/post/index.html
+public/post/2018-09-02-hello-r-markdown_files/figure-html/unnamed-chunk-1-1.png
+public/post/2015-07-23-r-rmarkdown_files/figure-html/pie-1.png
+public/js/math-code.js
+public/index.xml
+public/index.html
+public/images/logo.png
+public/images/logo.jpg
+public/images/hugo-logo.png
+public/fonts/merriweather-v13-latin-regular.woff2
+public/tags/r-markdown/index.xml
+public/tags/r-markdown/index.html
+public/tags/plot/index.xml
+public/tags/plot/index.html
+public/tags/index.xml
+public/tags/index.html
+public/sitemap.xml
